--- a/test/Makefile
+++ b/test/Makefile
@@ -1,8 +1,12 @@
-CC ?= cc
+CXX ?= c++
+override CXXFLAGS += -std=c++11
+override CXXFLAGS += -Wall -Wextra -Wpedantic
+override CXXFLAGS += -I../include
+override LDFLAGS += -L.. -lsap
 
-OBJECTS := $(patsubst src/%.c,$\
+OBJECTS := $(patsubst src/%.cpp,$\
 	build/%.o,$\
-	$(shell find src -name '*.c'))
+	$(shell find src -name '*.cpp'))
 
 define REMOVE
 $(if $(wildcard $1),$\
@@ -12,15 +16,15 @@ endef
 
 all: test
 
-test: ${OBJECTS}
-	${CC} ${CFLAGS} ${LDFLAGS} $< -o $@
+test: ${OBJECTS} ../libsap.a
+	${CXX} ${CXXFLAGS} ${LDFLAGS} ${OBJECTS} -o $@
 
-build/%.o: src/%.c
-	${CC} ${CFLAGS} -c $< -o $@
+build/%.o: src/%.cpp
+	${CXX} ${CXXFLAGS} -c $< -o $@
 
 remove/%:
 	$(call REMOVE,$(patsubst remove/%,%,$@))
 
-clean: $(foreach FILE,${OBJECTS},remove/${FILE})
+clean: $(foreach FILE,${OBJECTS} test,remove/${FILE})
 
 .PHONY: all clean remove/%
